--- a/index.html
+++ b/index.html
@@ -1,9 +1,79 @@
 ---
 layout: default
 title: Pralobh Lokhande
----
+<!-- ---
 <div class="blurb">
 	<h1>Hi there, I'm Pralobh Lokhande!</h1>
 	<p>I am a Computer Science Graduate student at the University of Texas, Arlington, specializing in Databases and Artificial Intelligence.
 	</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+</div><!-- /.blurb --> -->
+<h1><strong>Hi, I'm <a href="https://pralobh.github.io.com">Pralobh</a></strong> <img src="https://raw.githubusercontent.com/syedareehaquasar/syedareehaquasar/master/gifs/Hi.gif" width="28px"></h1>
+
+<h3 align="center"><em>Learning Data Science is like going to the gym. You only benefit if you do it consistently.💯</em></h3>
+
+<p>This is what I have learned over the past two years. I am an innovative person by nature and a data scientist by passion. I am currently a Master's in Computer Science student at the University of Georgia & a tech enthusiast who loves working with data and solve problems using Machine Learning and Data Science.</p>
+
+<hr>
+<img align="right" src="https://media.giphy.com/media/8DTnuPhxv0m4w/giphy.gif" width="300px">
+<h3>🚀 Some things you should know 👇</h3>
+<ul>
+<li>👨‍💻 I'm currently a <em>Computer Science (specialization in AI and DB)</em> student at <strong>The University of Texas at Arlington</strong>.</li>
+<li>👨‍🔬 I'm working as a <em>Graduate Teaching Assistant</em>at muy university</strong>.</li>
+<li>☁  Worked as a <em>Associate Consultant</em> at <strong>Capgemini</strong> for 2 years.</li>
+<li>👨‍🎓 Learning every day. I believe sharing is the best way of learning.</li>
+</ul>
+<hr>
+
+<h3>My Skills include 👨‍💻</h3>
+<div>
+    <img src="https://img.shields.io/badge/python-%2314354C.svg?style=for-the-badge&logo=python&logoColor=white">
+    <img src="https://img.shields.io/badge/postgres-%23316192.svg?style=for-the-badge&logo=postgresql&logoColor=white">
+    <img src="https://img.shields.io/badge/scikit--learn-%23F7931E.svg?style=for-the-badge&logo=scikit-learn&logoColor=white">
+    <img src="https://img.shields.io/badge/pandas-%23150458.svg?style=for-the-badge&logo=pandas&logoColor=white">
+    <img src="https://img.shields.io/badge/numpy-%23013243.svg?style=for-the-badge&logo=numpy&logoColor=white">
+    <img src="https://img.shields.io/badge/TensorFlow-%23FF6F00.svg?style=for-the-badge&logo=TensorFlow&logoColor=white">
+    <img src="https://img.shields.io/badge/AWS-%23FF9900.svg?style=for-the-badge&logo=amazon-aws&logoColor=white">
+    <img src="https://img.shields.io/badge/git-%23F05033.svg?style=for-the-badge&logo=git&logoColor=white">
+    <img src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white">
+    <img src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white">
+    <!--img src="https://img.shields.io/badge/bootstrap-%23563D7C.svg?style=for-the-badge&logo=bootstrap&logoColor=white"-->
+</div>
+<br>
+<hr>
+
+<img align="right" src="https://thumbs.gfycat.com/WigglyDopeyLeopardseal-max-1mb.gif" width="300px">
+<h3>🦄 While I am not doing Data Science 😉</h3>
+<ul>
+  <li>Watch an Anime 🤓</li>
+    <li>I love to go to the gym 🏋️‍♂️</li>    
+    <li>Baking 👨‍🍳😋</li>
+</ul>
+<hr>
+
+<h3>How to reach me ✨</h3>
+<div>
+    <a href="https://www.linkedin.com/in/pralobhlokhande/">
+        <img src="https://image.flaticon.com/icons/png/512/145/145807.png" width="30px">
+    </a>&nbsp;&nbsp;
+    <a href="https://twitter.com/pralobhlokhande/">
+        <img src="https://image.flaticon.com/icons/png/512/145/145812.png" width="30px">
+    </a>&nbsp;&nbsp;
+    <a href="mailto: pralobhlokhande@gmail.com">
+        <img src="https://image.flaticon.com/icons/png/512/732/732200.png" width="30px">
+    </a>&nbsp;&nbsp;
+    <a href="https://github.com/pralobh/">
+        <img src="https://image.flaticon.com/icons/png/512/25/25657.png" width="30px">
+    </a>&nbsp;&nbsp;
+  <a href="https://eportfolio.greatlearning.in/pralobh-lokhande">
+        <img src="https://image.flaticon.com/icons/png/512/1306/1306097.png" width="30px">
+    </a>&nbsp;&nbsp;
+</div>
+<hr>
+<br>
+<div >
+    <img align="left" src="https://github-readme-stats.vercel.app/api?username=pralobh&count_private=true&show_icons=true&theme=radical"  width="400px" alt="pralobh">
+    &nbsp;&nbsp;
+    &nbsp;&nbsp;
+    <img align="center" src="https://github-readme-stats.vercel.app/api/top-langs/?username=pralobh&layout=compact&theme=radical"  width="350px" alt="pralobh">
+</div>
+
