--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 ---
 layout: default
 title: Pralobh Lokhande
-<!-- ---
+---
+<!--
 <div class="blurb">
 	<h1>Hi there, I'm Pralobh Lokhande!</h1>
 	<p>I am a Computer Science Graduate student at the University of Texas, Arlington, specializing in Databases and Artificial Intelligence.
 	</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb --> -->
-<h1><strong>Hi, I'm <a href="https://pralobh.github.io.com">Pralobh</a></strong> <img src="https://raw.githubusercontent.com/syedareehaquasar/syedareehaquasar/master/gifs/Hi.gif" width="28px"></h1>
+</div><!-- /.blurb -->
+<h1><strong>Hi, I'm <a href="https://pralobh.github.io">Pralobh</a></strong> <img src="https://raw.githubusercontent.com/syedareehaquasar/syedareehaquasar/master/gifs/Hi.gif" width="28px"></h1>
 
 <h3 align="center"><em>Learning Data Science is like going to the gym. You only benefit if you do it consistently.💯</em></h3>
 
