--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@ title: Pralobh Lokhande
 
 <h3 align="center"><em>Learning Data Science is like going to the gym. You only benefit if you do it consistently.💯</em></h3>
 
-<p>This is what I have learned over the past two years. I am an innovative person by nature and a data scientist by passion. I am currently a Master's in Computer Science student at the University of Georgia & a tech enthusiast who loves working with data and solve problems using Machine Learning and Data Science.</p>
+<p>I am a data science and technology with main interest in Neural Networks and NLP.</p>
 
 <hr>
-<img align="right" src="https://media.giphy.com/media/8DTnuPhxv0m4w/giphy.gif" width="300px">
-<h3>🚀 Some things you should know 👇</h3>
+<h3>🚀 Here are few things about me 👇</h3>
 <ul>
 <li>👨‍💻 I'm currently a <em>Computer Science (specialization in AI and DB)</em> student at <strong>The University of Texas at Arlington</strong>.</li>
 <li>👨‍🔬 I'm working as a <em>Graduate Teaching Assistant</em>at muy university</strong>.</li>
@@ -42,7 +41,6 @@ title: Pralobh Lokhande
 <br>
 <hr>
 
-<img align="right" src="https://thumbs.gfycat.com/WigglyDopeyLeopardseal-max-1mb.gif" width="300px">
 <h3>🦄 While I am not doing Data Science 😉</h3>
 <ul>
   <li>Watch an Anime 🤓</li>
