--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@ title: Pralobh Lokhande
 </div><!-- /.blurb -->
 <h1><strong>Hi, I'm <a href="https://pralobh.github.io">Pralobh</a></strong> <img src="https://raw.githubusercontent.com/syedareehaquasar/syedareehaquasar/master/gifs/Hi.gif" width="28px"></h1>
 
-<h3 align="center"><em>Moto: Consistensy is the key to achieve perfection.💯</em></h3>
+<h3 align="center"><em>Moto: Consistency is the key to achieve perfection.💯</em></h3>
 
-<p>I am a data science and technology enthusiast with main interest in Neural Networks and NLP.</p>
+<p>I am a data science and technology enthusiast with main interest in Data Engineering and Machine Learning.</p>
 
 <hr>
 <h3>🚀 Here are few things about me 👇</h3>
 <ul>
-<li>👨‍💻 I'm currently a pursuining my masters in <em>Computer Science (specialization in AI and DB)</em> degree at <strong>The University of Texas at Arlington</strong>.</li>
-<li>👨‍🔬 I'm working as a <em>Graduate Teaching Assistant</em>at my university</strong>.</li>
-<li>☁  Worked as a <em>Data Engineer</em> for <strong>Capgemini and Exusia</strong> for 2 years.</li>
+<li>👨‍💻I am working as a <em>Data Engineer Intern</em> at Kestra Financial</li>
+<li>👨‍🔬I'm currently a pursuing my masters in <em>Computer Science (specialization in AI and DB)</em> degree at <strong>The University of Texas at Arlington</strong>.</li>
+<li>☁  Worked as a <em>Data Engineer</em> for 2 years.</li>
 <li>👨‍🎓 Learning every day. I believe sharing is the best way of learning.</li>
 </ul>
 <hr>
