--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ title: Pralobh Lokhande
 <hr>
 <h3>🚀 Here are few things about me 👇</h3>
 <ul>
-<li>👨‍💻I am working as a <em>Data Engineer Intern</em> at Kestra Financial</li>
-<li>👨‍🔬I'm currently a pursuing my masters in <em>Computer Science (specialization in AI and DB)</em> degree at <strong>The University of Texas at Arlington</strong>.</li>
-<li>☁  Worked as a <em>Data Engineer</em> for 2 years.</li>
+<li>👨‍💻I am working as a <em>Data Engineer Intern</em> at Insight Global</li>
+<li>👨‍🔬I have a masters in <em>Computer Science </em> degree at <strong>The University of Texas at Arlington</strong>.</li>
+<li>☁  Worked as a <em>Data Engineer</em> for 9 years.</li>
 <li>👨‍🎓 Learning every day. I believe sharing is the best way of learning.</li>
 </ul>
 <hr>
@@ -43,9 +43,8 @@ title: Pralobh Lokhande
 
 <h3>🦄 While I am not doing Data Science 😉</h3>
 <ul>
+  <li>Work on myu HomeLab</li>
   <li>Watch an Anime 🤓</li>
-    <li>I love to go to the gym 🏋️‍♂️</li>    
-    <li>Baking 👨‍🍳😋</li>
 </ul>
 <hr>
 
