--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Pralobh Lokhande
 
 <h3>🦄 While I am not doing Data Science 😉</h3>
 <ul>
-  <li>Work on myu HomeLab</li>
+  <li>Work on my HomeLab</li>
   <li>Watch an Anime 🤓</li>
 </ul>
 <hr>
